2011-06-29  Tristan Gingold  <gingold@adacore.com>

	* config/tc-i386.c (i386_mach): Convert to ISO-C.
	(md_begin, pe_directive_secrel, md_estimate_size_before_relax): Ditto.
	(md_convert_frag, md_apply_fix, md_undefined_symbol): Ditto.
	(md_section_align, tc_gen_reloc): Ditto.

2011-06-28  Tristan Gingold  <gingold@adacore.com>

	* config/tc-alpha.c (s_alpha_pdesc): Fix indentation. Do not
	generate dummy fix.

2011-06-28  Tristan Gingold  <gingold@adacore.com>

	* config/tc-alpha.c (load_expression): Use alloca instead of xmalloc.
	(emit_jsrjmp): Ditto.
	(tc_gen_reloc): Ditto.

2011-06-28  Tristan Gingold  <gingold@adacore.com>

	* config/tc-alpha.c (alpha_evax_proc_hash): Remove.
	(alpha_evax_proc_data): New variable.
	(s_alpha_ent): Prevent nested function.  Remove has_insert call.
	(s_alpha_pdesc): Do not call demand_empty_rest_of_line in case of
	error.  Do not search in the hash table.  Check if match with .ent.
	(s_alpha_name): Remove unused variable.
	(md_begin): Remove initialization of alpha_evax_proc_hash.

2011-06-27  Tristan Gingold  <gingold@adacore.com>

	* config/tc-alpha.c (add_to_link_pool): Remove basesym parameter.
	Locally declare basesym.  Add comments.  Do not set literal_pool_size.
	(load_expression): Adjust call to add_to_link_pool.
	(s_alpha_pdesc): Define pdesc symbol using dot.
	Do not set literal_pool_size.
	(s_alpha_end): Use NULL instead of 0.

2011-06-27  Tristan Gingold  <gingold@adacore.com>

	* config/obj-evax.c (evax_frob_file_before_adjust): Add comments.
	Fix style.
	* config/obj-evax.h (struct alpha_linkage_fixups): Remove seg
	field.  Add comments.
	(obj_symbol_type, object_headers, OBJ_SYMFIELD_TYPE): Remove

2011-06-26  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/tc-mips.c (fix_24k_record_store_info): If the previous
	instruction was a store, and the next instructions are unknown,
	assume the worst.

2011-06-25  Richard Sandiford  <rdsandiford@googlemail.com>

	PR gas/12915